# vascusim

./: .coverage  README.md  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/source/contributing/: github_workflows.md
docs/source/development/: github_workflows.rst
tests/: test_io.py  test_processing.py  test_visualization.py
vascusim/: __init__.py
vascusim/data/: __init__.py  conversion.py  dataset.py  transforms.py
vascusim/io/: __init__.py  cache.py  formats.py  streaming.py  vtk_utils.py
vascusim/processing/: __init__.py  geometry.py  parallel.py  preprocessing.py
vascusim/utils/: __init__.py  metadata.py  visualization.py
