[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vascusim"
description = "Dataset package for cardiovascular simulations"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Wenzhuo Xu", email = "YOUR_EMAIL@example.com"}
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20.0",
    "torch>=1.10.0",
    "torch-geometric>=2.0.0",
    "requests>=2.25.0",
    "vtk>=9.0.0",
    "matplotlib>=3.5.0",
    "tqdm>=4.60.0",
    "pyvista>=0.34.0",
    "huggingface_hub>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=22.0",
    "isort>=5.10",
    "flake8>=4.0",
    "mypy>=0.9",
]
docs = [
    "sphinx>=4.4",
    "sphinx-rtd-theme>=1.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.15",
]

[project.urls]
Homepage = "https://github.com/biosimmlab/vascusim"
Issues = "https://github.com/biosimmlab/vascusim/issues"
Documentation = "https://vascusim.readthedocs.io"

[tool.setuptools_scm]
write_to = "vascusim/_version.py"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=vascusim"